--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -1,53 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Resources for PHONE or PHONE+TABLET dimensions. These will be used on all devices for
+    which our app was designed. Overrides for tablet specific dimensions should go in values-sw600dp
+    and overrides for 10" tablet specific dimensions should go in values-sw800dp -->
+
     <dimen name="match_parent">-1px</dimen>
     <dimen name="wrap_content">-2px</dimen>
-
-    <!-- Tablet -->
-    <dimen name="tablet_search_width">@dimen/match_parent</dimen>
-    <dimen name="tablet_result_corner_radius">2dp</dimen>
-    <dimen name="tablet_result_row_primary_text_size">15sp</dimen>
-    <dimen name="tablet_result_row_secondary_text_size">14sp</dimen>
-    <dimen name="tablet_result_row_price_size">21sp</dimen>
-
-    <!-- Tablet results -->
-    <dimen name="checkbox_filter_widget_padding_left">38dp</dimen>
-    <dimen name="sliding_filter_row_height">44dp</dimen>
-    <dimen name="results_column_spacing">2dp</dimen>
-    <dimen name="results_list_spacer_height">8dp</dimen>
-    <dimen name="results_list_margin_top">40dp</dimen>
-    <dimen name="results_column_header_height">48dp</dimen>
-
-    <dimen name="results_flight_histogram_horizontal_padding">16dp</dimen>
-    <dimen name="results_flight_histogram_vertical_padding">10dp</dimen>
-    <dimen name="results_flight_histogram_price_horizontal_margin">10dp</dimen>
-    <dimen name="results_flight_histogram_vertical_margin">6dp</dimen>
-    <dimen name="results_flight_histogram_horizontal_margin">12dp</dimen>
-
-    <dimen name="tablet_hotel_details_vertical_padding">64dp</dimen>
-    <fraction name="tablet_hotel_details_horizontal_spacing_percentage">14%</fraction>
-    <dimen name="bucket_top_margin">14dp</dimen>
 
     <!-- Flights -->
     <dimen name="tablet_filter_white_space">32dp</dimen>
     <dimen name="tablet_flight_details_horizontal_padding">24dp</dimen>
     <dimen name="tablet_flight_details_flight_trip_view_text_size">17sp</dimen>
     <dimen name="tablet_flight_details_statistic_drawable_spacing">8dp</dimen>
-
-    <!-- Tablet details -->
-    <dimen name="non_refundable_tweak">0dp</dimen>
-    <dimen name="add_rate_button_min_width">48dp</dimen>
-    <dimen name="tablet_details_compact_header_height">57dp</dimen>
-    <dimen name="tablet_reviews_header_height">112dp</dimen>
-
-    <!-- Tablet checkout -->
-    <dimen name="trip_bucket_expanded_card_padding">2dp</dimen>
-    <dimen name="cvv_text_view_right_margin_amex">20dp</dimen>
-    <dimen name="cvv_text_view_right_margin_other">82dp</dimen>
-    <dimen name="cvv_text_view_top_margin_amex">-10dp</dimen>
-    <dimen name="cvv_text_view_top_margin_other">-15dp</dimen>
-    <dimen name="tablet_checkout_form_autocomplete_width">256dp</dimen>
 
     <!-- Launch dimens -->
     <dimen name="launch_tile_space_width">2dp</dimen>
@@ -175,9 +140,6 @@
     <dimen name="percent_off_corner_margin_top">3dp</dimen>
     <dimen name="percent_off_corner_margin_right">2dp</dimen>
 
-    <!-- Tablet specific hotel row dimensions -->
-    <dimen name="hotel_row_med_container_height">28dp</dimen>
-
     <!-- Text sizes for amenities -->
     <dimen name="amenity_text_size_large">12sp</dimen>
     <dimen name="amenity_text_size_small">10sp</dimen>
@@ -283,38 +245,9 @@
     <dimen name="app_widget_min_height">72dp</dimen>
     <dimen name="app_widget_min_width">294dp</dimen>
 
-
-    <!-- For map pins on tablet launch screen -->
-    <dimen name="destination_search_stack_width">186dp</dimen>
-    <dimen name="destination_search_stack_height">160dp</dimen>
-    <dimen name="destination_search_tile_width">166dp</dimen>
-    <dimen name="destination_search_tile_height">140dp</dimen>
-    <dimen name="destination_search_item_divider_padding">24dp</dimen>
-    <dimen name="destination_stack_padding">5dp</dimen>
-    <dimen name="destination_stack_text_container_height">56dp</dimen>
-    <dimen name="destination_stack_corner_radius">3dp</dimen>
-    <dimen name="destination_search_tile_text_margin_top">94dp</dimen>
-    <dimen name="hotels_map_pin_padding">50dp</dimen>
-    <dimen name="tablet_search_header_height">44dp</dimen>
-    <dimen name="tablet_results_flight_map_padding">40dp</dimen>
-    <dimen name="tablet_results_hotel_map_pin_padding">64dp</dimen>
-    <dimen name="hotel_map_price_pin_text_size">12dp</dimen>
-
-    <!-- Tablet trip bucket dimens -->
-    <!-- TODO: move this to layout-sw800dp -->
-    <dimen name="tripbucket_bookbutton_height">50dp</dimen>
-    <dimen name="trip_bucket_item_horizontal_margin">32dp</dimen>
-    <dimen name="trip_bucket_swipe_out_distance">48dp</dimen>
-    <dimen name="trip_bucket_swipe_out_distance_half">24dp</dimen>
-    <dimen name="trip_bucket_primary_dest_size">60dp</dimen>
-    <dimen name="trip_bucket_root_layout_padding_top">110dp</dimen>
-    <dimen name="trip_bucket_empty_trip_container_padding_top">0dp</dimen>
-    <dimen name="trip_bucket_sold_out_container_padding">2dp</dimen>
-    <dimen name="trip_bucket_sold_out_container_padding_bottom">6dp</dimen>
-
     <!-- Tablet hotel map popup dimens -->
-    <dimen name="tablet_hotel_map_popup_thumbnail_height">126dp</dimen>
-    <dimen name="tablet_hotel_map_popup_thumbnail_width">111dp</dimen>
+    <dimen name="hotel_map_popup_thumbnail_height">126dp</dimen>
+    <dimen name="hotel_map_popup_thumbnail_width">111dp</dimen>
 
     <!-- Flight baggage fee stuff -->
     <dimen name="tablet_flight_list_baggage_fee_icon_padding">5dp</dimen>
