--- a/project/res/values-sw800dp/dimens.xml
+++ b/project/res/values-sw800dp/dimens.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Resources for 10" TABLET SPECIFIC dimensions. These will be used on 10" tablets only.
+    Dimensions for tablet generic dimensions should go in values-sw600dp
+    and dimensions for app generic dimensions should go in values -->
+
+    <dimen name="tablet_search_width">768dp</dimen>
+
     <!-- Tablet Flights -->
     <dimen name="standard_content_width">600dp</dimen>
     <dimen name="flight_header_bottom_margin">200dp</dimen>
@@ -27,6 +33,10 @@
     <dimen name="hotel_flight_card_width">352dp</dimen>
     <dimen name="hotel_flight_card_padding_x">32dp</dimen>
     <dimen name="hotel_flight_card_padding_y">6dp</dimen>
+    <dimen name="tripbucket_bookbutton_height">50dp</dimen>
+    <dimen name="trip_bucket_primary_dest_size">60dp</dimen>
+    <dimen name="trip_bucket_root_layout_padding_top">110dp</dimen>
+    <dimen name="trip_bucket_empty_trip_container_padding_top">0dp</dimen>
 
     <!-- Tablet Empty Search Result related dimens -->
     <dimen name="tablet_empty_search_result_bg_top">307dp</dimen>
