--- a/project/res/menu/menu_launch_tablet.xml
+++ b/project/res/menu/menu_launch_tablet.xml
@@ -5,7 +5,7 @@
         android:id="@+id/menu_your_trips"
         android:icon="@drawable/ic_action_bar_trips"
         android:showAsAction="always|withText"
-        android:title="@string/trips"/>
+        android:title="@string/Your_Trips"/>
     <item
         android:id="@+id/menu_settings"
         android:icon="@android:drawable/ic_menu_manage"
