--- a/project/res/layout/fragment_tablet_launch.xml
+++ b/project/res/layout/fragment_tablet_launch.xml
@@ -8,6 +8,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="?android:attr/actionBarSize"
+        android:layout_gravity="top"
+        android:background="@drawable/bg_tablet_actionbar"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -39,7 +45,8 @@
         <FrameLayout
             android:id="@+id/tiles_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_tablet_bottom_fade"/>
 
     </LinearLayout>
 
