--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -125,6 +125,7 @@
 
     <style name="V2.Widget.ActionBar.TabletLaunch">
         <item name="android:displayOptions">showHome|useLogo|showCustom</item>
+        <item name="android:background">@null</item>
     </style>
 
     <style name="V2.Widget.ActionBar.TabletResults">
