--- a/project/res/layout/fragment_flight_search_params.xml
+++ b/project/res/layout/fragment_flight_search_params.xml
@@ -243,13 +243,12 @@
                 android:id="@+id/infant_alert_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
                 android:padding="4dp"
                 android:background="#FF9900"
                 android:textColor="#F3F3F3"
                 android:textSize="16sp"
                 android:text="@string/max_one_infant_per_lap"
-                android:visibility="gone"
+                android:visibility="invisible"
                 mobiata:textStyle="light" />
 
         </LinearLayout>
