--- a/project/res/layout/fragment_tablet_results_flights.xml
+++ b/project/res/layout/fragment_tablet_results_flights.xml
@@ -10,6 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/results_top_gradient_height"
+        android:layout_gravity="top"
+        android:background="@drawable/bg_tablet_actionbar"/>
+
     <!-- FLIGHT LEG CONTAINER -->
     <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/flight_leg_container"
