--- a/project/res/layout/fragment_tablet_results_hotels.xml
+++ b/project/res/layout/fragment_tablet_results_hotels.xml
@@ -24,6 +24,12 @@
         android:alpha="0"
         android:background="@color/map_dimmer" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/results_top_gradient_height"
+        android:layout_gravity="top"
+        android:background="@drawable/bg_tablet_actionbar"/>
+
     <!-- FORGROUND CONTAINERS -->
 
     <com.expedia.bookings.widget.FrameLayoutTouchController
