2147: Fix flights confirmation screen drawing
- Got rid of a RelativeLayout in favor of a FrameLayout. I don't
  understand why it was a RelativeLayout in the first place.
- The cardHeight was measuring as 16 million and some odd pixels tall.
  The layout is already match_parent, wrap_content so I just measure
  with UNSPECIFIED.
- Marked some stuff final because I like immutable things.

--- a/project/res/layout/fragment_flight_confirmation.xml
+++ b/project/res/layout/fragment_flight_confirmation.xml
@@ -27,7 +27,7 @@
             android:textSize="21dp"
             app:textStyle="light" />
 
-        <RelativeLayout
+        <FrameLayout
             android:id="@+id/flight_card_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
