2880: Adjusted collapsed size of search results columns

--- a/project/res/values-sw600dp/dimens.xml
+++ b/project/res/values-sw600dp/dimens.xml
@@ -47,7 +47,9 @@
     <dimen name="results_column_spacing">2dp</dimen>
     <dimen name="results_list_spacer_height">8dp</dimen>
     <dimen name="results_list_margin_top">40dp</dimen>
+    <!-- note: results_column_header_height should be equal to results_list_spacer_height + results_list_margin_top -->
     <dimen name="results_column_header_height">48dp</dimen>
+    <dimen name="results_collapsed_row_height">284dp</dimen>
     <dimen name="results_top_gradient_height">144dp</dimen>
 
     <dimen name="results_flight_histogram_horizontal_padding">16dp</dimen>
