--- a/project/res/layout/fragment_tablet_results_list.xml
+++ b/project/res/layout/fragment_tablet_results_list.xml
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical|left"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="@dimen/hotel_flight_card_padding_x"
             android:gravity="center_vertical|left"
             android:textSize="18sp"
             app:textStyle="light" />
@@ -54,7 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical|right"
-            android:layout_marginRight="8dp"
+            android:layout_marginRight="@dimen/hotel_flight_card_padding_x"
             android:gravity="center_vertical|right"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
