--- a/project/res/layout/fragment_tablet_results_trip_bucket.xml
+++ b/project/res/layout/fragment_tablet_results_trip_bucket.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="@dimen/results_column_header_height"
             android:layout_gravity="center_vertical|left"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="@dimen/hotel_flight_card_padding_x"
             android:gravity="center_vertical|left"
             android:textSize="18sp"
             android:text="@string/your_trip"
