--- a/project/res/layout-sw600dp/section_hotel_summary_tablet.xml
+++ b/project/res/layout-sw600dp/section_hotel_summary_tablet.xml
@@ -119,7 +119,7 @@
                 android:textSize="@dimen/hotel_row_strikethrough_price_text_size"
                 android:visibility="gone"/>
 
-            <TextView
+            <com.expedia.bookings.widget.TextView
                 android:id="@+id/price_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -127,7 +127,7 @@
                 android:includeFontPadding="false"
                 android:textColor="#ffffff"
                 android:textSize="@dimen/tablet_result_row_price_size"
-                android:textStyle="bold"/>
+                app:textStyle="medium" />
         </LinearLayout>
     </LinearLayout>
 
