--- a/project/res/values-sw600dp/dimens.xml
+++ b/project/res/values-sw600dp/dimens.xml
@@ -10,6 +10,7 @@
     <dimen name="tablet_result_row_primary_text_size">15sp</dimen>
     <dimen name="tablet_result_row_secondary_text_size">14sp</dimen>
     <dimen name="tablet_result_row_price_size">21sp</dimen>
+    <dimen name="tablet_result_row_price_max_width">170dp</dimen>
 
     <!-- Launch Screen -->
     <dimen name="launch_pin_size">86dp</dimen>
