--- a/project/res/layout/include_tablet_search_missing_flight_info.xml
+++ b/project/res/layout/include_tablet_search_missing_flight_info.xml
@@ -11,10 +11,12 @@
     android:paddingLeft="24dp"
     android:paddingRight="24dp">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/ic_tablet_sold_out_flight"/>
+    <com.larvalabs.svgandroid.widget.SVGView
+        android:id="@+id/empty_bucket_img"
+        android:layout_width="@dimen/tablet_empty_search_result_svg_width"
+        android:layout_height="@dimen/tablet_empty_search_result_svg_height"
+        app:src="@raw/ic_tablet_sold_out_flight"
+        app:zoomMode="fitDocument" />
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/missing_departure_text"
