--- a/project/res/values-sw600dp/dimens.xml
+++ b/project/res/values-sw600dp/dimens.xml
@@ -64,6 +64,8 @@
     <dimen name="bucket_top_margin">14dp</dimen>
 
     <!-- Empty Search Result related dimens -->
+    <dimen name="tablet_empty_search_result_svg_height">70dp</dimen>
+    <dimen name="tablet_empty_search_result_svg_width">80dp</dimen>
     <dimen name="tablet_empty_search_result_bg_top">207dp</dimen>
     <dimen name="tablet_empty_search_result_text_bottom_margin">50dp</dimen>
 
