--- a/project/res/layout/fragment_tripbucket.xml
+++ b/project/res/layout/fragment_tripbucket.xml
@@ -31,9 +31,9 @@
 
                 <ImageView
                     android:id="@id/flight_swipe_out_indicator_image"
-                    android:layout_width="@dimen/trip_bucket_swipe_out_distance"
+                    android:layout_width="264dp"
                     android:layout_height="match_parent"
-                    android:background="#66000000"
+                    android:background="#00000000"
                     android:src="@drawable/ic_error_blue"/>
             </com.expedia.bookings.widget.SwipeOutLayout>
 
@@ -53,9 +53,9 @@
 
                 <ImageView
                     android:id="@id/hotel_swipe_out_indicator_image"
-                    android:layout_width="@dimen/trip_bucket_swipe_out_distance"
+                    android:layout_width="264dp"
                     android:layout_height="match_parent"
-                    android:background="#ffff0000"
+                    android:background="#00000000"
                     android:src="@drawable/ic_error_blue"/>
 
             </com.expedia.bookings.widget.SwipeOutLayout>
