--- a/project/res/layout/activity_tablet_results.xml
+++ b/project/res/layout/activity_tablet_results.xml
@@ -47,6 +47,8 @@
     <!-- TripBucket Item Removal Undo Bar -->
     <include
         android:id="@+id/undobar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         layout="@layout/view_undobar" />
 
