--- a/project/res/layout/fragment_results_gde_flights.xml
+++ b/project/res/layout/fragment_results_gde_flights.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,7 +8,8 @@
     <LinearLayout
         android:id="@+id/header_container"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/results_column_header_height"
+        android:layout_gravity="top"
         android:background="@color/tablet_white_pane_bg"
         android:gravity="center_vertical"
         android:orientation="horizontal"
@@ -48,16 +49,17 @@
 
     </LinearLayout>
 
-    <com.expedia.bookings.widget.CenteredCaptionedIcon
-        android:id="@+id/missing_flight_info_view"
-        android:layout_height="fill_parent"
-        android:layout_width="fill_parent"
-        android:background="@color/tablet_white_pane_bg"
-        app:svg="@raw/ic_tablet_sold_out_flight"/>
-
     <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/histogram_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/results_column_header_height" />
+
+    <com.expedia.bookings.widget.CenteredCaptionedIcon
+        android:id="@+id/missing_flight_info_view"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:background="@color/tablet_white_pane_bg"
+        app:svg="@raw/ic_tablet_sold_out_flight"/>
+</FrameLayout>
 
