Haphazardly changed some fill_parent -> match_parent

--- a/project/res/layout-sw600dp/snippet_booking_overview_traveler.xml
+++ b/project/res/layout-sw600dp/snippet_booking_overview_traveler.xml
@@ -18,7 +18,7 @@
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/traveler_empty_text_view"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical|left"
         android:text="@string/enter_traveler_info"
