--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -226,7 +226,7 @@
 
     <style name="V2.Widget.RadioButton.Filter">
         <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">fill_parent</item>
+        <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">1</item>
         <item name="android:button">@android:color/transparent</item>
         <item name="android:paddingLeft">8dp</item>
